Adding bootstrap and other stylings.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -51,7 +51,7 @@ input[type=text], input[type=password], textarea {
         }
 
 #sidebar {
-    background: #2742c3;
+    background: #2c2c2c;
     color: #eee;
     position: fixed;
     height: 100%;
