--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,19 +23,39 @@
     </div>
 
     <div id="wrapper">
-        <div id="main">
-
-            <div>
-                <button id="sidebarToggle" class="btn btn-primary"><i class="fa fa-angle-left"></i></button>
-            </div>
-
+        <div id="main" class="container-fluid">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li>
+                            <button id="sidebarToggle" class="btn btn-primary"><i class="fa fa-angle-left"></i></button>
+                        </li>
+                    </ul>
+                    <a asp-controller="App" asp-action="Index" class="navbar-brand">The World</a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#" class="btn btn-sm btn-info">
+                                <i class="fa fa-save"></i>Save
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-sm btn-info">
+                                <i class="fa fa-print"></i>Print
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            l
             @RenderBody()
         </div>
     </div>
 
 
-    <div id="footer">
-        <p class="text-primary">&copy; Jeff Solutions Ltd.</p>
+    <div id="footer" class="container-fluid">
+        <div class="nav navbar-inverse navbar-fixed-bottom">
+            <h4 class="text-center text-info">&copy; Jeff Solutions Ltd.</h4>
+        </div>
     </div>
 
     <script type="text/javascript" src="~/lib/jQuery/dist/jquery.min.js" asp-append-version="true"></script>
