--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <li><a asp-controller="App" asp-action="About">Trips</a></li>
-                <li><a asp-controller="Auth" asp-action="Contact">Logout</a></li>
+                <li><a asp-controller="Auth" asp-action="Logout">Logout</a></li>
             }
         </ul>
     </div>
