--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -1,16 +1,12 @@
 ﻿@model IEnumerable<TheWorld.Models.Trip>
-@{ 
+@{
     ViewBag.Title = "Home Page";
-}
-@section Scripts {
-    <script src="~/lib/angular/angular.min.js"></script>    
-    <script src="~/js/app-trips.js"></script>
-    <script src="~/js/tripsController.js"></script>
 }
 
 <div class="row" ng-app="app-trips">
 
-    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
+
+    <div ng-controller="tripsController as vm" ng-model="TEST" class="col-md-6 col-md-offset-3">
         <table class="table table-responsive table-striped">
             <tr ng-repeat="trip in vm.trips">
                 <td>{{ trip.name }}</td>
@@ -21,7 +17,7 @@
 
         <form novalidate name="newTripForm" ng-submit"vm.addTrip()">
             <div class="form-group">
-                <label for="name">Trip Name></label>
+                <label for="name">Trip Name</label>
                 <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" required ng-minlength="5"/>
                 <span ng-show="newTripForm.name.$error.requried" class="text-warning">Name is required.</span>
                 <span ng-show="newTripForm.name.$error.minlength" class="text-warning">Name must be at least five characters.</span>
@@ -41,14 +37,14 @@
         <form>
             <div class="form-group">
                 <label>Date</label>
-                <input class="form-control"/>
+                <input class="form-control" />
             </div>
             <div class="form-group">
                 <label>Location</label>
                 <input class="form-control" />
             </div>
             <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
+                <input type="submit" value="Add" class="btn btn-success" />
             </div>
         </form>
     </div>
@@ -66,3 +62,5 @@
     </div>
 
 </div>
+
+
