Adding missing AngularJS and controller references.

--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -3,6 +3,12 @@
     ViewBag.Title = "Home Page";
 }
 
+@section Scripts {
+    <script src="~/lib/angular/angular.min.js"></script>
+    <script src="~/js/app-trips.js"></script>
+    <script src="~/js/tripsController.js"></script>
+}
+
 <div class="row" ng-app="app-trips">
 
 
