--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -5,14 +5,16 @@
 
 @section Scripts {
     <script src="~/lib/angular/angular.min.js"></script>
-    <script src="~/js/app-trips.js"></script>
-    <script src="~/js/tripsController.js"></script>
+    <script src="~/js/app-trips.js" asp-append-version="true"></script>
+    <script src="~/js/tripsController.js" asp-append-version="true"></script>
 }
 
 <div class="row" ng-app="app-trips">
 
 
     <div ng-controller="tripsController as vm" ng-model="TEST" class="col-md-6 col-md-offset-3">
+        <div ng-show="vm.isBusy" class="text-center"><i class="fa fa-spinner fa-spin"></i>Loading...</div>
+        <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
         <table class="table table-responsive table-striped">
             <tr ng-repeat="trip in vm.trips">
                 <td>{{ trip.name }}</td>
