--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -12,18 +12,18 @@
 <div class="row" ng-app="app-trips">
 
 
-    <div ng-controller="tripsController as vm" ng-model="TEST" class="col-md-6 col-md-offset-3">
+    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
         <div ng-show="vm.isBusy" class="text-center"><i class="fa fa-spinner fa-spin"></i>Loading...</div>
         <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
         <table class="table table-responsive table-striped">
             <tr ng-repeat="trip in vm.trips">
                 <td>{{ trip.name }}</td>
-                <td>{{ trip.created | date: 'MM-dd-yyyy' }}</td>
+                <td>{{ trip.dateCreated | date: 'MM-dd-yyyy' }}</td>
                 <td><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
             </tr>
         </table>
 
-        <form novalidate name="newTripForm" ng-submit"vm.addTrip()">
+        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
             <div class="form-group">
                 <label for="name">Trip Name</label>
                 <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" required ng-minlength="5"/>
