Using a Non-AngularJS Plugin - No API Key included.  See: https://developers.google.com/maps/documentation/javascript/get-api-key

--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -3,8 +3,13 @@
 }
 
 @section Scripts {
+    <script src="~/lib/underscore/underscore-min.js"></script>
     <script src="~/lib/angular/angular.min.js"></script>
     <script src="~/lib/angular-route/angular-route.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+        type="text/javascript"></script>
+    <script src="~/lib/gmaps/gmaps.min.js"></script>
+    <script src="~/lib/travelmap/travelmap.min.js"></script>
     <script src="~/js/simpleControls.js" asp-append-version="true"></script>
     <script src="~/js/app-trips.js" asp-append-version="true"></script>
     <script src="~/js/tripsController.js" asp-append-version="true"></script>
