--- a/wwwroot/views/tripEditorView.html
+++ b/wwwroot/views/tripEditorView.html
@@ -1,5 +1,8 @@
 ﻿<div>
-    <a href="#/" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i> Back</a>
+    <div>
+        <a href="#/" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i> Back</a>
+    </div>
+
     <div class="col-md-3">
 
         <h2>{{ vm.tripName }}</h2>
@@ -34,6 +37,7 @@
 
     <div class="col-md-9">
         <h2>The Map</h2>
+        <div id="map"></div>
     </div>
 
 </div>
