--- a/Views/App/Trips.cshtml
+++ b/Views/App/Trips.cshtml
@@ -10,11 +10,21 @@
         type="text/javascript"></script>
     <script src="~/lib/gmaps/gmaps.min.js"></script>
     <script src="~/lib/travelmap/travelmap.min.js"></script>
-    <script src="~/js/simpleControls.js" asp-append-version="true"></script>
-    <script src="~/js/app-trips.js" asp-append-version="true"></script>
-    <script src="~/js/tripsController.js" asp-append-version="true"></script>
-    <script src="~/js/tripEditorController.js" asp-append-version="true"></script>
-}
+
+    <environment names="Development">
+        <script src="~/js/simpleControls.js" asp-append-version="true"></script>
+        <script src="~/js/app-trips.js" asp-append-version="true"></script>
+        <script src="~/js/tripsController.js" asp-append-version="true"></script>
+        <script src="~/js/tripEditorController.js" asp-append-version="true"></script>
+    </environment>
+
+    <environment names="Production,Staging">
+        <script src="~/lib/_app/simpleControls.js" asp-append-version="true"></script>
+        <script src="~/lib/_app/app-trips.js" asp-append-version="true"></script>
+        <script src="~/lib/_app/tripsController.js" asp-append-version="true"></script>
+        <script src="~/lib/_app/tripEditorController.js" asp-append-version="true"></script>
+    </environment>
+    }
 
 <div class="row" ng-app="app-trips">
 
